--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -25,6 +25,20 @@
       #{/list}
       </select>
 
+      <select name="p.cooperatorId" class="inline selectize" style="width:150px;">
+        <option value="">供应商</option>
+      #{list items:cooperators, as:'cop'}
+        <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
+      #{/list}
+      </select>
+
+      <select name="p.type" class="inline">
+        <option value="">异动类型</option>
+      #{list items:models.whouse.StockRecord.T.values(), as:'t'}
+            <option value="${t.name()}" ${p.type==t ? 'selected' : ''}>${t.label()}</option>
+      #{/list}
+      </select>
+
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
         <input type="text" name="p.search" placeholder="SKU,采购计划ID,FBA" value="${p.search}" style="width:200px;">
@@ -34,7 +48,7 @@
 
       <div class="inline">
         <a href="javascript:void(0)" data-url="@{Excels.stockRecords(p)}" data-target="_blank" class="btn btn-info inline"
-           id="exportBtn">开始盘点</a>
+           id="exportBtn">导出</a>
       </div>
     </div>
 
@@ -50,6 +64,7 @@
             <th>名称</th>
             <th>FBA</th>
             <th>FBA 仓库</th>
+            <th>供应商</th>
             <th>运输方式</th>
             <th>项目名称</th>
             <th>异动时间</th>
@@ -72,6 +87,7 @@
             </td>
             <td>${r.unit?.fba?.shipmentId}</td>
             <td>${r.unit?.whouse?.name}</td>
+            <td>${r.unit.cooperator?.name}</td>
             <td>${r.unit?.shipType?.label()}</td>
             <td>${r.unit?.projectName}</td>
             <td>#{time_tooltip time: r.createDate, datetime: true/}</td>
