--- a/core/app/views/StockRecords/stockIndex.html
+++ b/core/app/views/StockRecords/stockIndex.html
@@ -1,8 +1,12 @@
 #{extends 'main_full.html' /}
 #{set title:"库存管理"  /}
+#{set 'moreStyles'}
+    #{stylesheet 'bootstrap-multiselect.css'/}
+#{/set}
 #{set 'moreScripts'}
+    #{script 'bootstrap-multiselect.js'/}
     #{script 'component/pagination.coffee'/}
-    #{script 'stockrecords/index.coffee'/}
+    #{script 'stockrecords/index.es6'/}
 #{/set}
 <style>
   .table td{
@@ -15,18 +19,13 @@
 <div class="row-fluid">
   <form action="@{StockRecords.stockIndex()}" method="get" class="search_form" id="search_Form">
     <div class="span12">
-      <select name="p.whouse.id" class="inline " style="width:150px;">
-        <option value="">仓库</option>
-      #{list items:whouses, as:'w'}
-        <option value="${w.id}" ${p.whouse?.id==w.id? 'selected' : ''}>${w.name}</option>
-      #{/list}
-      </select>
-
-      <select name="p.projectName" class="inline">
-        <option value="">项目名称</option>
-        <option value="EASYACC" ${p.projectName=='EASYACC'?'selected':''}>EASYACC</option>
-        <option value="B2B" ${p.projectName=='B2B'?'selected':''}>B2B</option>
-      </select>
+      <div class="input-prepend inline">
+        <select name="p.whouses" multiple="multiple" id="whouse">
+        #{list items:whouses, as:'w'}
+          <option value="${w.id}" ${p.whouses.contains(w.id) ? 'selected' : ''}>${w.name}</option>
+        #{/list}
+        </select>
+      </div>
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
@@ -55,7 +54,7 @@
         <th width="60px;">入库数</th>
         <th width="60px;">可用库存</th>
         <th width="60px;">不良品数</th>
-        <th> 实际交货时间</th>
+        <th>实际收货时间</th>
         <th width="120px;">FBA-ShipmentId</th>
         <th>项目名称</th>
         <th width="200px;">操作</th>
