--- a/core/app/views/Refunds/unQualifiedIndex.html
+++ b/core/app/views/Refunds/unQualifiedIndex.html
@@ -34,58 +34,84 @@
         <input type="hidden" name="p.page" value="${p.page}">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
+
+      <div class="input-prepend input-append inline">
+        <input type="button" id="batchBtn" class="btn btn-warning" value="批量退货"/>
+      </div>
     </div>
   </form>
 </div>
 
 <div class="row-fluid">
-  <div class="span12">
-    <table class="table table-condensed table-bordered" id="data_table">
-      <tr>
-        <th width="80px;">采购计划ID</th>
-        <th width="300px;">Selling</th>
-        <th width="200px;">SKU</th>
-        <th>名称</th>
-        <th width="60px;">供应商</th>
-        <th width="120px;">FBA-ShipmentId</th>
-        <th>项目名称</th>
-        <th width="60px;">不良品数</th>
-        <th width="200px;">处理说明</th>
-        <th width="200px;">不良品数处理</th>
-      </tr>
-    #{list items: units, as: 'u'}
-      <tr>
-        <td>${u.id}</td>
-        <td>${u.selling?.sellingId}</td>
-        <td>${u.sku}</td>
-        <td title="${u.product?.abbreviation}">${u.product?.abbreviation}</td>
-        <td>${u.cooperator?.name}</td>
-        <td>${u.fba?.shipmentId}</td>
-        <td>${u.projectName}</td>
-        <td>${u.unqualifiedQty}</td>
-        <td><input type="text" name="memo" value=""></td>
-        <td>
-          <input type="text" style="width:35px;" name="qty" value="${u.unqualifiedQty}" data-origin="${u.unqualifiedQty}">
-          <input type="button" class="btn btn-warning" name="refundBtn" value="退货"
-                 data-url="@{Refunds.unQualifiedHandle()}" data-id="${u.id}">
-            #{if Arrays.asList('IN_STORAGE','DELIVERY','DONE').contains(u.stage.name())}
-              <input type="button" class="btn btn-success" name="transferBtn" value="转入成品"
-                     data-url="@{Refunds.transferQty()}" data-id="${u.id}">
-            #{/if}
-        </td>
-      </tr>
-    #{/list}
-      <tr>
-        <td colspan="11">
-        #{if units.size() == 0}
-          暂时还没有库存记录
-        #{/if}
-        #{else }
-            #{bootstrap_pager pi:p, url:'' /}
-        #{/else}
-        </td>
-      </tr>
-    </table>
+  <form action="@{Refunds.batchRefund()}" method="post" id="commitForm">
+    <div class="span12">
+      <table class="table table-condensed table-bordered" id="data_table">
+        <tr>
+          <th><input type="checkbox" id="checkbox_all" class="checkall"></th>
+          <th width="80px;">采购计划ID</th>
+          <th width="300px;">Selling</th>
+          <th width="200px;">SKU</th>
+          <th>名称</th>
+          <th width="60px;">供应商</th>
+          <th width="120px;">FBA-ShipmentId</th>
+          <th>项目名称</th>
+          <th>质检时间</th>
+          <th width="60px;">不良品数</th>
+          <th width="200px;">处理说明</th>
+          <th width="200px;">不良品数处理</th>
+        </tr>
+      #{list items: units, as: 'u'}
+        <tr>
+          <td><input type="checkbox" name="units[${u_index-1}].id" value="${u.id}" data-cooper="${u.cooperator.id}"></td>
+          <td>${u.id}</td>
+          <td>${u.selling?.sellingId}</td>
+          <td>${u.sku}</td>
+          <td title="${u.product?.abbreviation}">${u.product?.abbreviation}</td>
+          <td>${u.cooperator?.name}</td>
+          <td>${u.fba?.shipmentId}</td>
+          <td>${u.projectName}</td>
+          <td>#{time_tooltip time:u.qcDate()/}</td>
+          <td>${u.unqualifiedQty}</td>
+          <td><input type="text" name="memo" value=""></td>
+          <td>
+            <input type="text" style="width:35px;" name="units[${u_index-1}].attrs.qty" value="${u.unqualifiedQty}"
+                   data-origin="${u.unqualifiedQty}">
+            <input type="button" class="btn btn-warning" name="refundBtn" value="退货"
+                   data-url="@{Refunds.unQualifiedHandle()}" data-id="${u.id}">
+              #{if Arrays.asList('IN_STORAGE','DELIVERY','DONE').contains(u.stage.name())}
+                <input type="button" class="btn btn-success" name="transferBtn" value="转入成品"
+                       data-url="@{Refunds.transferQty()}" data-id="${u.id}">
+              #{/if}
+          </td>
+        </tr>
+      #{/list}
+        <tr>
+          <td colspan="11">
+          #{if units.size() == 0}
+            暂时还没有库存记录
+          #{/if}
+          #{else }
+              #{bootstrap_pager pi:p, url:'' /}
+          #{/else}
+          </td>
+        </tr>
+      </table>
+    </div>
+    <input type="hidden" id="batchMemo" name="batchMemo" value="">
+  </form>
+</div>
+
+<div id="batch_refund_modal" class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>退货说明</h3>
+  </div>
+  <div class="modal-body">
+    <textarea style="width:515px;height:100px;" id="refundMemo"></textarea>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+    <a class="btn btn-primary" id="submitBtn" data-action="@{Inbounds.updateBoxInfo()}">提交</a>
   </div>
 </div>
 
