库存异动页面 引入js错误

--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -2,7 +2,7 @@
 #{set title:'库存异动记录(' + records.size() + ')'/}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
-    #{script 'stockrecords/index.coffee'/}
+    #{script 'stockrecords/index.es6'/}
 #{/set}
 #{flash_alert /}
 
