--- a/core/app/views/Inbounds/_units.html
+++ b/core/app/views/Inbounds/_units.html
@@ -10,7 +10,7 @@
     <th width="30px;">#</th>
     <th width="40px;">采购计划ID</th>
     <th width="80px;">采购单</th>
-    <th width="120px;">Selling</th>
+    <th width="160px;">Selling</th>
     <th width="250px;">SKU<br>产品名称</th>
     <th width="140px;">预计交货时间/<br>预计运输时间</th>
     <th style="width:45px;">计划交货数量</th>
@@ -24,7 +24,8 @@
     <th>质检结果</th>
     <th>合格数</th>
     <th>不良品数</th>
-    <th width="100px;">目标仓库</th>
+    <th width="80px;">目标仓库</th>
+    <th>项目名称</th>
   </tr>
 
 #{list items:units, as:'unit'}
@@ -39,7 +40,9 @@
         <td>
           <a href="@{Deliveryments.show(unit.unit?.deliveryment?.id)}" target="_blank">${unit.unit?.deliveryment?.id}</a>
         </td>
-        <td>${unit.unit?.selling?.sellingId}</td>
+        <td style="word-break:break-all;">
+          <a href="@{Sellings.selling(unit.unit?.selling?.sellingId)}" target="_blank">${unit.unit?.selling?.sellingId}</a>
+        </td>
         <td title="${unit.unit?.product.abbreviation}">
           <a href="@{Products.show(unit.unit?.product?.sku)}" target="_blank">${unit.unit?.product?.sku}</a><br>
           (${unit.unit?.product.abbreviation?.xxLong()})
@@ -115,6 +118,7 @@
               #{/list}
           </select>
         </td>
+        <td>${unit.unit.projectName}</td>
       </tr>
     #{/if}
     #{else }
@@ -156,6 +160,7 @@
         <td>${unit.qualifiedQty}</td>
         <td>${unit.unqualifiedQty}</td>
         <td>${unit.target?.name}</td>
+        <td>${unit.unit?.projectName}</td>
       </tr>
     #{/else}
 #{/list}
