--- a/core/app/views/Inbounds/index.html
+++ b/core/app/views/Inbounds/index.html
@@ -120,7 +120,10 @@
   </form>
 </div>
 
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;">
+  <div class="modal-header">
+    <h4>包装信息</h4>
+  </div>
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
