--- a/core/app/views/Refunds/edit.html
+++ b/core/app/views/Refunds/edit.html
@@ -37,12 +37,8 @@
       <tr>
         <th>退货类型<span style="color:red">*</span></th>
         <td><input type="text" value="${refund.type?.label()}" readonly></td>
-        <th>B2B选项</th>
-        <td>
-          <label class="checkbox">
-            <input type="checkbox" name="refund.isb2b" value="true"> B2B
-          </label>
-        </td>
+        <th></th>
+        <td></td>
       </tr>
 
       <tr>
@@ -91,12 +87,13 @@
   #{if refund.status.name() == "Create"}
     <button class="btn btn-danger" id="deleteBtn">解除</button>
   #{/if}
+    <input type="button" class="btn btn-primary" id="batchUpdateBoxInfoBtn" value="批量更新包装信息">
   </div>
 </div>
 
 #{records records:logs/}
 
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;">
+<div id="refund_box_info_modal" class="modal hide fade" style="width:1000px;">
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
