--- a/core/app/views/Refunds/index.html
+++ b/core/app/views/Refunds/index.html
@@ -127,13 +127,13 @@
   </form>
 </div>
 
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;">
+<div id="refund_box_info_modal" class="modal hide fade" style="width:1000px;">
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-    <a class="btn btn-primary" id="submitBoxInfoBtn" data-action="@{Inbounds.updateBoxInfo()}">提交</a>
+    <a class="btn btn-primary" id="submitBoxInfoBtn" data-action="@{Refunds.updateBoxInfo()}">提交</a>
   </div>
 </div>
 
