--- a/core/app/views/Shipments/_shipment.html
+++ b/core/app/views/Shipments/_shipment.html
@@ -2,19 +2,19 @@
 #{authenticityToken /}
   <table class="table table-condensed table-bordered">
     <tr>
-      <th>Title (Create By ${ship.creater ? ship.creater.username : "System"})</th>
+      <th width="200px;">Title (Create By ${ship.creater ? ship.creater.username : "System"})</th>
       <td colspan="3">
         <input type="text" name="ship.title" class="span10" value="${ship.title ? ship.title : ship.title()}">
       </td>
     </tr>
+
     <tr>
       <th>运输单号</th>
       <td>
-      ${ship.id}
-        <input type="hidden" id="shipmentId" name="shipid" value="${ship.id}">
+        <input type="text" id="shipmentId" name="shipid" value="${ship.id}" readonly>
       </td>
-      <th>创建时间</th>
-      <td>${ship.createDate.datetime()}</td>
+      <th width="200px;">创建时间</th>
+      <td><input type="date" value="${ship.createDate.datetime()}" readonly></td>
     </tr>
 
     <tr>
@@ -41,7 +41,6 @@
         <input type="date" name="ship.dates.planArrivDateForCountRate" value="${ship.dates.planArrivDateForCountRate.date()}"
                rel="popover" content="用于计算准时到货率(只有在 '计划' 与 '锁定准备运输' 状态下的运输单才允许修改该字段)" placement="right">
       </td>
-
       <th>晚到货原因</th>
       <td>
         <input name="ship.reason" class="span8" rel="popover" placement="right" value="${ship.reason}" id="reason"/>
@@ -91,9 +90,12 @@
     <tr>
       <th>国际快递商</th>
       <td>
-      #{select 'ship.internationExpress', items: models.procure.Shipment.Express(), value: ship.internationExpress}
-          #{option ''}选择快递商#{/option}
-      #{/select}
+        <select name="ship.internationExpress">
+          <option value="">选择快递商</option>
+        #{list items:models.procure.Shipment.Express(), as:'i'}
+          <option value="${i.name()}" ${i.name()==ship.internationExpress?.name() ? 'selected' : ''}>${i.name()}</option>
+        #{/list}
+        </select>
       </td>
       <th>总质量(kg)质检</th>
       <td>${ship.totalWeightQuaTest()}</td>
@@ -102,9 +104,12 @@
     <tr>
       <th>运输商</th>
       <td>
-      #{select 'ship.cooper.id', items: shippers, labelProperty: 'fullName',  value: ship.cooper?.id}
-          #{option ''}选择运输商#{/option}
-      #{/select}
+        <select name="ship.cooper.id">
+          <option value="">选择运输商</option>
+        #{list items:shippers, as:'s'}
+          <option value="${s.id}" ${s.id==ship.cooper?.id ? 'selected' : ''}>${s.fullName}</option>
+        #{/list}
+        </select>
       </td>
       <th>总体积(m³)质检</th>
       <td>${ship.totalVolumeQuaTest().format('#.##')}</td>
@@ -113,9 +118,12 @@
     <tr>
       <th>仓库</th>
       <td>
-      #{select 'ship.whouse.id', items: whouses, labelProperty: 'name', value: ship.whouse?.id}
-          #{option ''}选择仓库#{/option}
-      #{/select}
+        <select name="ship.whouse.id">
+          <option value="">选择仓库</option>
+        #{list items:whouses, as:'w'}
+          <option value="${w.id}" ${w.id==ship.whouse?.id ? 'selected' : ''}>${w.name}</option>
+        #{/list}
+        </select>
       </td>
       <th>总箱数(件)质检</th>
       <td>${ship.totalUnitQuaTest()}</td>
@@ -127,9 +135,9 @@
       <th>总重量(kg)货代</th>
       <td>
         <input type="text" name="ship.totalWeightShipment" value="${ship.totalWeightShipment}" id="totalWeightShipment"/>
-      <td>
+      </td>
     </tr>
-
+    
     <tr>
       <th>目的地</th>
       <td>${ship.target}</td>
@@ -162,8 +170,8 @@
     </tr>
 
     <tr>
-      <td colspan="4">
-        <h4>Comment</h4>
+      <th><h4>Comment</h4></th>
+      <td colspan="3">
         <textarea rows="4" id="ship_memo" name="ship.memo" class="span12">${ship.memo}</textarea>
       </td>
     </tr>
