--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -180,6 +180,7 @@
             仓库地址：深圳市光明新区玉律村汉海达科技创新园 1 栋 A 区 6 楼
             电   话：0755-21383192-8060/8061
             收货联系人：
+                    Jie：  18692275630
                     杨上德：13724219110
                     方  圆：15974143832（经理）
           </textarea>
