删除 入库单 退货单的 项目名称

--- a/core/app/views/DeliverPlans/indexWhouse.html
+++ b/core/app/views/DeliverPlans/indexWhouse.html
@@ -32,7 +32,7 @@
     </select>
 
     <label class="checkbox inline">
-      <input type="checkbox" name="p.showAll" value="true" ${p.showAll ? 'checked' : ''}>显示已收货
+      <input type="checkbox" name="p.showAll" value="true" ${p.showAll ? 'checked' : ''}>显示未收货
     </label>
 
     <div class="input-prepend input-append inline">
