--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -96,13 +96,14 @@
           <th width="120px;">出库单ID</th>
           <th>名称</th>
           <th width="80px;">目的国家</th>
-          <th width="80px;">项目名称</th>
+          <th>项目名称</th>
           <th width="80px;">状态</th>
           <th width="80px;">运输方式</th>
           <th width="100px;">出库类型</th>
           <th width="200px;">货代公司</th>
           <th width="120px;">出库日期</th>
           <th width="80px;">发货人</th>
+          <th>创建人</th>
           <th width="200px;">备注</th>
         </tr>
       #{list items: outbounds, as: 'o'}
@@ -122,6 +123,7 @@
           <td>${o.showCompany()}</td>
           <td>#{time_tooltip time:o.outboundDate/}</td>
           <td>${o.consignor?.username}</td>
+          <td>${o.creator?.username}</td>
           <td title="${o.memo}">${o.memo.overLong()}</td>
         </tr>
 
