--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -14,6 +14,7 @@
     </th>
   #{/if}
     <th width="40px;">#</th>
+    <th>父ID</th>
     <th width="40px;">阶段</th>
     <th width="150px;">Selling</th>
     <th>Sku</th>
@@ -84,6 +85,7 @@
         #{/if}<br>
     ${unit.id}
     </td>
+    <td>${unit.parent?.id}</td>
     <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
     <td class="selling_id" style="word-break:break-all;">
       <a href="@{Sellings.selling(unit.selling?.sellingId)}" target="_blank">${unit.selling?.sellingId}</a>
