--- a/core/app/views/Refunds/unQualifiedIndex.html
+++ b/core/app/views/Refunds/unQualifiedIndex.html
@@ -55,7 +55,7 @@
           <th width="60px;">供应商</th>
           <th width="120px;">FBA-ShipmentId</th>
           <th>项目名称</th>
-          <th>质检时间</th>
+          <th width="80px">质检时间</th>
           <th width="60px;">不良品数</th>
           <th width="200px;">处理说明</th>
           <th width="200px;">不良品数处理</th>
