仓库模块采购计划增加排序 以及手动单的bug修改

--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -1,5 +1,5 @@
 #{set tr_key: key ? key : 'unit'/}
-<table class="table table-condensed table-bordered" id="unit_table">
+<table class="table table-condensed table-bordered dataTable" id="unit_table">
   <tr>
   #{if checkbox}
     <th width="20px;">
