--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -199,7 +199,7 @@
           <td style="word-break:break-all;">${unit.whouse?.name()}</td>
           <td>${unit.currWhouse?.name}</td>
           <td>${unit.cooperator?.name}</td>
-          <td><a href="@{Deliveryments.show(unit.deliveryment?.id)}">${unit.deliveryment?.id}</a></td>
+          <td>${unit.deliveryment?.id}</td>
           <td>${unit.deliverplan?.id}</td>
           <td #{if unit.attrs.planQty != unit.attrs.qty && (unit.attrs.qty !=0 && unit.attrs.qty)} style="color:red"#{/if}>
           ${unit.attrs.planQty} / ${unit.attrs.qty} / ${unit.inboundQty}
