--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -91,7 +91,7 @@
   </td>
   <th>预计运输时间</th>
   <td>
-    <input type="date" name="unit.attrs.planShipDate" value="${unit.attrs.planShipDate.date()}">
+    <input type="date" name="unit.attrs.planShipDate" value="${unit.attrs.planShipDate.date()}" required>
   </td>
   <th>预计到库时间</th>
   <td>
