--- a/core/app/views/ProcureUnits/detail.html
+++ b/core/app/views/ProcureUnits/detail.html
@@ -89,7 +89,11 @@
       <td>#{time_tooltip time:unit.attrs.planShipDate/}</td>
       <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
       <td>#{time_tooltip time:unit.createDate/}</td>
-      <td>#{time_tooltip time:unit.outbound?.outboundDate/}</td>
+      <td>
+      #{if unit.outbound?.status?.name()=='Outbound'}
+           #{time_tooltip time:unit.outbound?.outboundDate/}
+      #{/if}
+      </td>
       <td>${unit.projectName}</td>
     </tr>
   </table>
@@ -158,7 +162,12 @@
         预计运输:#{time_tooltip time:u.attrs.planShipDate/}</td>
       <td>#{time_tooltip time:u.attrs.deliveryDate/}</td>
       <td>#{time_tooltip time:u.createDate/}</td>
-      <td>#{time_tooltip time:u.outbound?.outboundDate/}</td>
+      <td>
+      <td>
+          #{if u.outbound?.status?.name()=='Outbound'}
+           #{time_tooltip time:u.outbound?.outboundDate/}
+          #{/if}
+      </td>
       <td>${u.projectName}</td>
     </tr>
   #{/list}
