采购分拆修改时，计划数，收货数，入库数值不变

--- a/core/app/views/ProcureUnits/_splitOnNoSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnNoSelling.html
@@ -35,7 +35,7 @@
 #{/else}
   <th>预计交货时间</th>
   <td>
-    <input type="date" name="newUnit.attrs.planDeliveryDate" value="${newUnit.attrs.planDeliveryDate.date()}" required>
+    <input type="date" name="newUnit.attrs.planDeliveryDate" value="${unit.attrs.planDeliveryDate.date()}" required>
   </td>
   <th>单价</th>
   <td>
