--- a/core/app/views/Inbounds/_units.html
+++ b/core/app/views/Inbounds/_units.html
@@ -75,6 +75,12 @@
         </td>
         <td>
           <input type="button" class="btn btn-success btn-mini" data-id="${unit.id}" name="editBoxInfo" value="填写">
+            #{if !unit.validBoxInfoIsComplete()}
+              <i class="icon-remove" style="color:red"></i>
+            #{/if}
+            #{else }
+              <i class="icon-ok" style="color:green"></i>
+            #{/else}
         </td>
         <td>${unit.unit?.fba?.shipmentId}</td>
         <td>${unit.unit?.whouse?.name()}</td>
@@ -142,6 +148,12 @@
         <td>#{if unit.qty != unit.planQty}${unit.handType?.label()}#{/if}</td>
         <td>
           <input type="button" class="btn btn-success btn-mini" data-id="${unit.id}" name="editBoxInfo" value="查看">
+            #{if !unit.validBoxInfoIsComplete()}
+              <i class="icon-remove" style="color:red"></i>
+            #{/if}
+            #{else }
+              <i class="icon-ok" style="color:green"></i>
+            #{/else}
         </td>
         <td>${unit.unit?.fba?.shipmentId}</td>
         <td>${unit.unit?.whouse?.name()}</td>
