手动单入库后sku分拆时，预交交货时间默认为父级采购计划，不可编辑

--- a/core/app/views/ProcureUnits/_splitOnNoSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnNoSelling.html
@@ -35,7 +35,8 @@
 #{/else}
   <th>预计交货时间</th>
   <td>
-    <input type="date" name="newUnit.attrs.planDeliveryDate" value="${unit.attrs.planDeliveryDate.date()}" required>
+    <input type="date" name="newUnit.attrs.planDeliveryDate" value="${unit.attrs.planDeliveryDate.date()}" required
+    ${unit.stage.name()=='IN_STORAGE'?'readonly':''}>
   </td>
   <th>单价</th>
   <td>
