项目名称需要从OperatorConfig里面拿值

--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -82,9 +82,9 @@
 
         <select name="p.projectName" class="inline">
           <option value="">项目名称</option>
-        #{list items:models.view.post.ProcurePost.P, as:'n'}
-          <option ${n.name() == p.projectName ? 'selected' : ''} value="${n.name()}">${n.label()}</option>
-        #{/list}
+          #{list items:models.view.post.ProcurePost.projectNames, as:'n'}
+            <option ${n == p.projectName ? 'selected' : ''} value="${n}">${n}</option>
+          #{/list}
         </select>
 
         <div class="input-prepend input-append inline">
