--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -76,8 +76,8 @@
 
         <select name="p.projectName" class="inline">
           <option value="">项目名称</option>
-        #{list items:models.view.post.ProcurePost.P, as:'n'}
-          <option ${n.name() == p.projectName ? 'selected' : ''} value="${n.name()}">${n.label()}</option>
+        #{list items:models.view.post.ProcurePost.projectNames, as:'n'}
+          <option ${n == p.projectName ? 'selected' : ''} value="${n}">${n}</option>
         #{/list}
         </select>
 
