采购计划 新增 专线 字段

--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -102,7 +102,12 @@
     </label>
   #{/list}
   </td>
-  <th colspan="2"></th>
+  <th>专用渠道</th>
+  <td>
+    <label class="checkbox inline">
+      <input type="checkbox" name="newUnit.isDedicated" value="true" ${unit.isDedicated ? 'checked':''}> 特殊渠道
+    </label>
+  </td>
   <th>B2B选项</th>
   <td>
     <label class="checkbox inline">
