--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -147,7 +147,14 @@
   </td>
 </tr>
 <tr>
-  <td colspan="${unit.stage.name()=='IN_STORAGE'? 2 : 6}">
+  <th>专用渠道</th>
+  <td>
+    <label class="checkbox inline">
+      <input type="checkbox" name="unit.isDedicated" value="true" ${unit.isDedicated ? 'checked':''}> 专线
+      <span style="color:red">(如勾选此项，请先和物流部沟通)</span>
+    </label>
+  </td>
+  <td colspan="${unit.stage.name()=='IN_STORAGE'? 2 : 4}">
   #{list items: unit.relateShipment()}
     <div>
       <a href="@{Shipments.show(_.id)}" target="_blank">${_.id} (${_.type.label()})</a>
