--- a/core/app/views/ShipItems/index.html
+++ b/core/app/views/ShipItems/index.html
@@ -3,7 +3,7 @@
 #{set 'moreScripts'}
 #{/set}
 <script type="text/javascript">
-  $(document).on('click', '#today', function(e){
+  $(document).on('click', '#today', function (e) {
     $("input[name='p.from']").data('dateinput').setValue(new Date());
     $("input[name='p.to']").data('dateinput').setValue(new Date());
   });
@@ -28,11 +28,11 @@
     #{select 'p.dateType', items: p.dateTypes, labelProperty: '_2', valueProperty: '_1', value: p.dateType, class: 'inline selectize' /}
 
     #{select 'p.whouseId', items: whouses, labelProperty: 'name', valueProperty: 'id', style:'width:120px', value:p.whouseId, class:'inline selectize'}
-      #{option ''}FBA_ALL#{/option}
+        #{option ''}FBA_ALL#{/option}
     #{/select}
 
     #{select 'p.centerId', items: centers, labelProperty: 'centerId', valueProperty: 'centerId', value: p.centerId, style:'width:110px', class:'inline selectize'}
-      #{option ''}FBA Center#{/option}
+        #{option ''}FBA Center#{/option}
     #{/select}
 
       <label class="checkbox inline">
@@ -75,11 +75,11 @@
       </tr>
     #{list items: units, as:'unit'}
       <tr>
-        #{set relateShipments: unit.relateShipment()/}
+          #{set relateShipments: unit.relateShipment()/}
         <td>
-          #{ifnot relateShipments.size() > 0}
-            <label><input type="checkbox" name="units" value="${unit.id}"></label>
-          #{/ifnot}
+            #{ifnot relateShipments.size() > 0}
+              <label><input type="checkbox" name="units" value="${unit.id}"></label>
+            #{/ifnot}
         </td>
         <td>
           <a href="@{Deliveryments.show(unit.deliveryment?.id)}#${unit.id}" target="_blank">${unit.id}</a>
@@ -90,7 +90,9 @@
         <td>${unit.cooperator?.name}</td>
         <td>${unit.totalWeight()} kg</td>
         <td>${unit.whouse?.name}</td>
-        <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
+        <td style="color:${unit.shipType?.rgb()}">
+        ${unit.shipType?.label()}<span style="color:red">${unit.isDedicated?'(专线)':''}</span>
+        </td>
         <td>${unit.fba?.fbaCenter?.centerId}</td>
         <td>${unit.fba?.shipmentId}</td>
         <td>#{time_tooltip time: unit.attrs.planShipDate/}</td>
