--- a/core/app/views/Refunds/printRefundForm.html
+++ b/core/app/views/Refunds/printRefundForm.html
@@ -59,7 +59,7 @@
             <div style="height:10mm;overflow:hidden;">${i.unit?.product?.abbreviation}</div>
           </td>
           <td rowspan="2">${i.unit?.sku}</td>
-          <td rowspan="2">${i.unit?.fba?.id}</td>
+          <td rowspan="2">${i.unit?.fba?.shipmentId}</td>
           <td rowspan="2">${i.unit?.selling?.fnSku}</td>
           <td rowspan="2">${i.planQty}</td>
           <td rowspan="2">${i.qty}</td>
