--- a/core/app/views/Inbounds/printQuaternionForm.html
+++ b/core/app/views/Inbounds/printQuaternionForm.html
@@ -8,7 +8,7 @@
     }
   </style>
 </head>
-<body style="margin:0 0 0 0;">
+<body style="margin:0 0 0 10px;">
 #{list items:ten.keySet().iterator(), as:'p'}
     #{set first_o:ten.get(p).get(0) /}
 <div style="margin:0 0 0 0; height:188mm;width:100%;">
@@ -28,8 +28,8 @@
       <td>交货时间：${first_o.inbound?.receiveDate.date()}</td>
     </tr>
   </table>
-  <table border="1" style="width:290mm;word-wrap:break-word;table-layout: fixed;margin:0 0 0 0;"
-         class="table table-condensed table-bordered" cellpadding="0" cellspacing="0">
+  <table border="1" style="border-top:1px black solid; border-left: 1px black solid;width:290mm;word-wrap:break-word;
+    table-layout: fixed;margin:0 0 0 0;" class="table table-condensed table-bordered" cellpadding="0" cellspacing="0">
     <tr style="vertical-align:middle;">
       <td rowspan="2" style="width:10mm;">采购计划ID</td>
       <td rowspan="2" style="width:15mm;">采购单编号</td>
@@ -89,8 +89,8 @@
           </td>
           <td rowspan="2">${i.unit?.whouse?.name}</td>
           <td rowspan="2">${i.unit?.shipType?.label()}</td>
-          <td rowspan="2">${i.qty}</td>
-          <td rowspan="2">${i.result?.label()}</td>
+          <td rowspan="2"></td>
+          <td rowspan="2"></td>
         </tr>
         <tr>
           <td style="font-size:9px;">
