--- a/core/app/views/Inbounds/edit.html
+++ b/core/app/views/Inbounds/edit.html
@@ -48,7 +48,7 @@
       </tr>
       <tr>
         <th>创建日期</th>
-        <td><input type="date" readonly="readonly" value="${inbound.createDate}"></td>
+        <td><input type="date" readonly="readonly" value="${inbound.createDate.date()}"></td>
         <th>创建人</th>
         <td>${inbound.receiver?.username}</td>
       </tr>
