--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -143,7 +143,7 @@
   </form>
 </div>
 
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;">
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;left:40%;">
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
