快递运输更换运输单时，同时也需判断是否 同时更换出库单

--- a/core/app/views/Shipments/_show_items.html
+++ b/core/app/views/Shipments/_show_items.html
@@ -9,8 +9,7 @@
 </div>
 
 #{success_row title:'运输项目' /}
-<form action="@{ShipItems.adjust(ship.id, ship.id)}" method="POST" id="adjust_shipitems">
-
+<form action="@{ShipItems.adjust()}" method="POST" id="adjust_ship_items">
   <div class="row-fluid">
     <div class="span12">
     #{render './_shipitem.html', items: ship.items, itmRecord: true, isExpress: ship.type == models.procure.Shipment.T.EXPRESS/}
@@ -19,14 +18,12 @@
 #{power.ck 'shipitems.adjust'}
 <div class="row-fluid">
   <div class="span3">
-    <input type="text" name="shipmentId" placeholder="ShipmentId" style="margin-bottom:0">
-
+    <input type="text" name="targetId" placeholder="ShipmentId" style="margin-bottom:0">
+    <input type="hidden" name="shipmentId" value="${ship.id}">
     <div class="btn-group">
       <a class="btn preview"><i class="icon-file-alt"></i> 预览</a>
       <a class="btn btn-success adjust" data-disable-with='调整中...' data-confirm="确认调整?">
-        <i class="icon-adjust"></i>
-        调整
-      </a>
+        <i class="icon-adjust"></i>调整</a>
     </div>
   </div>
 #{/power.ck}
