--- a/core/app/views/Shipments/show.html
+++ b/core/app/views/Shipments/show.html
@@ -96,7 +96,7 @@ models.procure.Shipment.T.EXPRESS/}
   </div>
 </div>
 
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;">
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;left:40%;">
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
