--- a/core/app/views/StockRecords/stockIndex.html
+++ b/core/app/views/StockRecords/stockIndex.html
@@ -66,7 +66,7 @@
         <td>${u.id}</td>
         <td>${u.selling?.sellingId}</td>
         <td>${u.sku}</td>
-        <td title="${u.product?.abbreviation}">${u.product?.abbreviation?.xxLong()}</td>
+        <td rel="tooltip" title="${u.product?.abbreviation}">${u.product?.abbreviation?.overLong()}</td>
         <td>${u.inboundQty}</td>
         <td>${u.availableQty}</td>
         <td>${u.unqualifiedQty}</td>
