--- a/core/app/views/FBAs/shipmentDetail.html
+++ b/core/app/views/FBAs/shipmentDetail.html
@@ -40,9 +40,7 @@
     <td>
       <table border="0" width="100%" style="border: none;margin:0 0 0 0;padding:0;">
         <tr>
-          <td width="8%">
-            籍号
-          </td>
+          <td width="8%">箱号</td>
           <td width="8%" style="border:1px solid #000000; padding-left:6px;">
 
           </td>
