--- a/core/app/views/Inbounds/printQuaternionForm.html
+++ b/core/app/views/Inbounds/printQuaternionForm.html
@@ -11,7 +11,7 @@
 <body style="margin:0 0 0 10px;">
 #{list items:ten.keySet().iterator(), as:'p'}
     #{set first_o:ten.get(p).get(0) /}
-<div style="margin:0 0 0 0; height:188mm;width:100%;">
+<div style="margin:0 0 0 0; height:275mm;width:100%;">
   <table border="0" style="width:290mm;margin:0 0 0 0;">
     <tr style="text-align:center;height:8mm;">
       <td colspan="2" style="font-size:20px;font-weight:900;"><b>深圳品拓科技有限公司</b></td>
@@ -58,60 +58,64 @@
           #{set totalBoxNum: (i.mainBox?.boxNum==null ? 0 : i.mainBox?.boxNum) +
           (i.lastBox?.boxNum==null ? 0 : i.lastBox?.boxNum) +
           (totalBoxNum==null ? 0 : totalBoxNum) /}
+          #{set rowNum: i.lastBox?.num > 0 ? 2 : 1 /}
+          #{set fontSize: i.lastBox?.num > 0 ? 9 : 13 /}
         <tr style="height:7mm;">
-          <td rowspan="2">${i.unit?.id}</td>
-          <td rowspan="2">${i.unit?.deliveryment?.id}</td>
-          <td rowspan="2">
+          <td rowspan="${rowNum}">${i.unit?.id}</td>
+          <td rowspan="${rowNum}">${i.unit?.deliveryment?.id}</td>
+          <td rowspan="${rowNum}">
             <div style="height:10mm;overflow:hidden;">${i.unit?.product?.abbreviation}</div>
           </td>
-          <td rowspan="2">${i.unit?.sku}</td>
-          <td rowspan="2">${i.unit?.fba?.shipmentId}</td>
-          <td rowspan="2">${i.unit?.selling?.fnSku}</td>
-          <td rowspan="2">${i.planQty}</td>
-          <td rowspan="2">${i.qty}</td>
-          <td style="font-size:9px;" height="3.5mm;">
-            <div style="height:3mm;">${i.mainBox?.num}</div>
+          <td rowspan="${rowNum}">${i.unit?.sku}</td>
+          <td rowspan="${rowNum}">${i.unit?.fba?.shipmentId}</td>
+          <td rowspan="${rowNum}">${i.unit?.selling?.fnSku}</td>
+          <td rowspan="${rowNum}">${i.planQty}</td>
+          <td rowspan="${rowNum}">${i.qty}</td>
+          <td style="font-size:${fontSize}px;" height="3.5mm;">
+            <div style="height:${6/rowNum}mm;">${i.mainBox?.num}</div>
           </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.mainBox?.boxNum}</div>
+          <td style="font-size:${fontSize}px;">
+            <div style="height:${6/rowNum}mm;">${i.mainBox?.boxNum}</div>
           </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.mainBox?.singleBoxWeight}</div>
+          <td style="font-size:${fontSize}px;">
+            <div style="height:${6/rowNum}mm;">${i.mainBox?.singleBoxWeight}</div>
           </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.mainBox?.length}</div>
+          <td style="font-size:${fontSize}px;">
+            <div style="height:${6/rowNum}mm;">${i.mainBox?.length}</div>
           </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.mainBox?.width}</div>
+          <td style="font-size:${fontSize}px;">
+            <div style="height:${6/rowNum}mm;">${i.mainBox?.width}</div>
           </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.mainBox?.height}</div>
+          <td style="font-size:${fontSize}px;">
+            <div style="height:${6/rowNum}mm;">${i.mainBox?.height}</div>
           </td>
-          <td rowspan="2">${i.unit?.whouse?.name}</td>
-          <td rowspan="2">${i.unit?.shipType?.label()}</td>
-          <td rowspan="2"></td>
-          <td rowspan="2"></td>
+          <td rowspan="${rowNum}">${i.unit?.whouse?.name}</td>
+          <td rowspan="${rowNum}">${i.unit?.shipType?.label()}</td>
+          <td rowspan="${rowNum}"></td>
+          <td rowspan="${rowNum}"></td>
         </tr>
-        <tr>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.lastBox?.num}</div>
-          </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.lastBox?.boxNum}</div>
-          </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.lastBox?.singleBoxWeight}</div>
-          </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.lastBox?.length}</div>
-          </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.lastBox?.width}</div>
-          </td>
-          <td style="font-size:9px;">
-            <div style="height:3mm;">${i.lastBox?.height}</div>
-          </td>
-        </tr>
+          #{if rowNum == 2}
+            <tr>
+              <td style="font-size:9px;">
+                <div style="height:3mm;">${i.lastBox?.num}</div>
+              </td>
+              <td style="font-size:9px;">
+                <div style="height:3mm;">${i.lastBox?.boxNum}</div>
+              </td>
+              <td style="font-size:9px;">
+                <div style="height:3mm;">${i.lastBox?.singleBoxWeight}</div>
+              </td>
+              <td style="font-size:9px;">
+                <div style="height:3mm;">${i.lastBox?.length}</div>
+              </td>
+              <td style="font-size:9px;">
+                <div style="height:3mm;">${i.lastBox?.width}</div>
+              </td>
+              <td style="font-size:9px;">
+                <div style="height:3mm;">${i.lastBox?.height}</div>
+              </td>
+            </tr>
+          #{/if}
       #{/list}
     <tr style="height:9mm;">
       <td></td>
